--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NutriRateApp</string>
 
-    <string name="nutrirate">NutriRateTest</string>
+    <string name="nutrirate">NutriRate</string>
     <string name="judulbawah">Food Grading App</string>
 </resources>
