--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,24 @@
     <string name="onboardingTitle">Grading Makanan dengan Mudah</string>
     <string name="loremIpsum">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</string>
     <string name="textStart">Let\'s Start!</string>
+
+
+    <string name="regis_kenalan">Kenalan Dulu, Yuk</string>
+    <string name="regis_sudahakun"><u>Sudah punya akun</u></string>
+    <string name="regis_kitakenalan">Kita kenalan sambil bikin akun dulu ya... Kalau kamu sudah punya akun, masuk disini</string>
+    <string name="regis_hidupsehat">Hidup sehat, makanan sehat</string>
+    <string name="regis_nama">Nama</string>
+    <string name="regis_dipanggil">Kamu mau dipanggil siapa?</string>
+    <string name="regis_email">Email</string>
+    <string name="regis_contohemail">Masukin email kamu yuk! Contoh: abc@gmail.com</string>
+    <string name="regis_password">Password</string>
+    <string name="regis_buatakun">Buat Akun</string>
+    <string name="regis_bikinpassword">Bikin password nya juga ya! Minimal 8 karakter</string>
+
+
+    <string name="login_password">Masukin password juga ya !</string>
+    <string name="login_belumakun"><u>Belum punya akun</u></string>
+    <string name="login_selamat">Selamat Datang !</string>
+    <string name="login_selamatdatang">Selamat datang ya...Masukin akun kamu dulu yuk, belum punya akun? Buat disini</string>
+
 </resources>
