LOGIN REGIS UDAH BISA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="login_belumakun"><u>Belum punya akun</u></string>
     <string name="login_selamat">Selamat Datang !</string>
     <string name="login_selamatdatang">Selamat datang ya...Masukin akun kamu dulu yuk, belum punya akun? Buat disini</string>
+    <string name="login_masukdisini">Masuk Disini Ya !</string>
 
 
     <string name="nutrition_facts">Nutrition Facts</string>
