Add a custom app icon to application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NutriRateApp</string>
+    <string name="app_name">NutriRate</string>
 
     <string name="nutrirate">NutriRate</string>
     <string name="judulbawah">Food Grading App</string>
